# Custom_Memory_Manager

./: .gitignore  CMakeLists.txt  FFit.cpp  FFit.h  README.md  a.out  allocator.h  allocatorSingleton.cpp  allocatorSingleton.h  functions.cpp  functions.h  main.cpp
